freesia/k8s/apps/prom-stack-v3/thanos/thanos-query/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-query-http
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: query
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: thanos-query.harvestasya.org
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: thanos-query-http
              port:
                number: 10902
